edit sign up page

--- a/ProjectTemplate/SignUpPage.html
+++ b/ProjectTemplate/SignUpPage.html
@@ -48,7 +48,7 @@
     <div class="row" id="signIn">
             <div class="column left">
                 <br>
-                <a href="test.html"><h1 style="font-family: 'Homemade Apple', cursive; display: inline-block; font-size: 40px; font-weight: bold; text-align: center; color: white;">&ensp;&ensp;Artwork Gallery</h1>
+                <a href="HomePage.html"><h1 style="font-family: 'Homemade Apple', cursive; display: inline-block; font-size: 40px; font-weight: bold; text-align: center; color: white;">&ensp;&ensp;Artwork Gallery</h1>
                 </a>
             </div>
             <div class="column right">
