--- a/ProjectTemplate/HomePage.html
+++ b/ProjectTemplate/HomePage.html
@@ -3,6 +3,58 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto+Slab&display=swap" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript">
+    function LogOn(userId, pass) {
+			//the url of the webservice we will be talking to
+			var webMethod = "AccountServices.asmx/LogOn";
+			//the parameters we will pass the service (in json format because curly braces)
+			//note we encode the values for transmission over the web.  All the \'s are just
+			//because we want to wrap our keynames and values in double quotes so we have to
+			//escape the double quotes (because the overall string we're creating is in double quotes!)
+			var parameters = "{\"user_name\":\"" + encodeURI(userId) + "\",\"password\":\"" + encodeURI(pass) + "\"}";
+			//jQuery ajax method
+			$.ajax({
+				//post is more secure than get, and allows
+				//us to send big data if we want.  really just
+				//depends on the way the service you're talking to is set up, though
+				type: "POST",
+				//the url is set to the string we created above
+				url: webMethod,
+				//same with the data
+				data: parameters,
+				//these next two key/value pairs say we intend to talk in JSON format
+				contentType: "application/json; charset=utf-8",
+				dataType: "json",
+				//jQuery sends the data and asynchronously waits for a response.  when it
+				//gets a response, it calls the function mapped to the success key here
+				success: function (msg) {
+					//the server response is in the msg object passed in to the function here
+					//since our logon web method simply returns a true/false, that value is mapped
+					//to a generic property of the server response called d (I assume short for data
+					//but honestly I don't know...)
+					if (msg.d) {
+						//server replied true, so show the accounts panel
+						showPanel('accountsPanel');
+						window.location = "http://www.google.com/"
+					}
+					else {
+						//server replied false, so let the user know
+						//the logon failed
+						alert("logon failed");
+					}
+				},
+				error: function (e) {
+					//if something goes wrong in the mechanics of delivering the
+					//message to the server or the server processing that message,
+					//then this function mapped to the error key is executed rather
+					//than the one mapped to the success key.  This is just a garbage
+					//alert becaue I'm lazy
+					alert("You entered wrong information.");
+				}
+			});
+		}
+</script>
 <style>
     body, html {
       height: 100%;
@@ -43,9 +95,9 @@
       <h1 style="font-family: 'Homemade Apple', cursive; display: inline-block; font-size: 40px; font-weight: bold; text-align: center;">&ensp;&ensp;Artwork Gallery&ensp;</h1>
     </div>
     <div class="col2" style="display: inline-block; float: right;">
-      <form>
-      <p style="font-weight: bold; display: inline-block;">Email&emsp;<input type="text" name="user_email">&ensp;
-      Password&ensp;<input type="text" name="user_password">&emsp;&emsp;<br><br>
+      <form onsubmit="LogOn($('#logonId').val(), $('#logonPassword').val()); return false;">
+      <p style="font-weight: bold; display: inline-block;">Email&emsp;<input type="text" name="user_email" id="logonId">&ensp;
+      Password&ensp;<input type="text" name="user_password" id="logonPassword">&emsp;&emsp;<br><br>
       <input type="submit" value="Log In" style="border-radius: 5px; font-weight: bolder; padding: 0px 20px; cursor: pointer;
     line-height: 30px;
     border: 2px solid black;
