--- a/ProjectTemplate/SignUpPage.html
+++ b/ProjectTemplate/SignUpPage.html
@@ -53,6 +53,63 @@
     </style>
 
     <script type="text/javascript">
+
+        function LogOn(email, password) {
+            //the url of the webservice we will be talking to
+            var webMethod = "ProjectServices.asmx/LogOn";
+            //the parameters we will pass the service (in json format because curly braces)
+            //note we encode the values for transmission over the web.  All the \'s are just
+            //because we want to wrap our keynames and values in double quotes so we have to
+            //escape the double quotes (because the overall string we're creating is in double quotes!)
+            var parameters = "{\"email\":\"" + encodeURI(email) + "\",\"password\":\"" + encodeURI(password) + "\"}";
+            //jQuery ajax method
+            
+            $.ajax({
+                //post is more secure than get, and allows
+                //us to send big data if we want.  really just
+                //depends on the way the service you're talking to is set up, though
+                type: "POST",
+                //the url is set to the string we created above
+                url: webMethod,
+                //same with the data
+                data: parameters,
+                //these next two key/value pairs say we intend to talk in JSON format
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                //jQuery sends the data and asynchronously waits for a response.  when it
+                //gets a response, it calls the function mapped to the success key here
+                success: function (msg) {
+                    //the server response is in the msg object passed in to the function here
+                    //since our logon web method simply returns a true/false, that value is mapped
+                    //to a generic property of the server response called d (I assume short for data
+                    //but honestly I don't know...)
+                    if (msg.d) {
+                        //server replied true, so show the accounts panel
+                        window.location = "profile.html";
+                        alert("success");
+                    }
+                    else {
+                        //server replied false, so let the user know
+                        //the logon failed
+                        alert("logon failed");
+                    }
+                },
+                error: function (e) {
+                    //if something goes wrong in the mechanics of delivering the
+                    //message to the server or the server processing that message,
+                    //then this function mapped to the error key is executed rather
+                    //than the one mapped to the success key.  This is just a garbage
+                    //alert becaue I'm lazy
+                    alert("boo...");
+                }
+            });
+        }
+        //when we retrieve accounts, we'll put them here
+        //so that we can reference them later for admins
+        //that may want to edit accounts
+        var accountsArray;
+        //to begin with, we assume that the account is not an admin
+        var admin = false;
         
         function createUser(firstName, lastName, email, userName, password) {
             alert("adsljf");
@@ -93,10 +150,12 @@
             </a>
         </div>
         <div class="column right">
-            <form>
+            <form onsubmit="LogOn($('#emailId').val(),
+                $('#passID').val()); return false; ">
                 <br>
-                Email&emsp;&emsp;<input type="text" name="user_email">&ensp;<br><br>
-                Password&ensp;<input type="text" name="user_password"><br><br>
+
+                Email&emsp;&emsp;<input type="text" name="user_email" id="emailId">&ensp;<br><br>
+                Password&ensp;<input type="text" name="user_password" id="passID"><br><br>
                 <input type="submit" value="Log In" style="border-radius: 5px; color:maroon; font-weight: bolder; padding: 5px 30px;">&ensp;&ensp;
                 <a href="" style="color:white;">Forgot account?</a><br>
 
@@ -201,5 +260,4 @@
     </div>
 </body>
 </html>
-
 
