added unformatted loading all artwork we have on home page

--- a/ProjectTemplate/SignUpPage.html
+++ b/ProjectTemplate/SignUpPage.html
@@ -112,14 +112,12 @@
         var admin = false;
         
         function createUser(firstName, lastName, email, userName, password) {
-            alert("adsljf");
             var webMethod = "ProjectServices.asmx/CreateUser";
             var parameters = "{\"firstName\":\"" + encodeURI(firstName) + 
                 "\",\"lastName\":\"" + encodeURI(lastName) +
                 "\",\"email\":\"" + encodeURI(email) +
                 "\",\"userName\":\"" + encodeURI(userName) +
                 "\",\"password\":\"" + encodeURI(password) + "\" } ";
-            alert(parameters);
 
             //jQuery ajax method
             $.ajax({
@@ -130,8 +128,7 @@
                 dataType: "json",
                 success: function (msg) {
                     var responseFromServer = msg.d;
-                    alert(responseFromServer);
-                    alert("after");
+                    alert("Thank you for creating a new account, " + responseFromServer);
                 },
                 error: function (e) {
                     alert("this code will only execute if javascript is unable to access the webservice");
@@ -187,71 +184,6 @@
                 <input type="text" id="email" name="email" placeholder="Email"><br><br>
                 <input type="text" id="username" name="username" placeholder="New username"><br><br>
                 <input type="text" id="password" name="password" placeholder="New password"><br><br>
-                <!-- Birthday<br><br>
-                <select name="bd_month">
-                    <option value="Jan">Jan</option>
-                    <option value="Feb">Feb</option>
-                    <option value="Mar">Mar</option>
-                    <option value="Apr">Apr</option>
-                    <option value="May">May</option>
-                    <option value="Jun">Jun</option>
-                    <option value="Jul">Jul</option>
-                    <option value="Aug">Aug</option>
-                    <option value="Sep">Sep</option>
-                    <option value="Oct">Oct</option>
-                    <option value="Nov">Nov</option>
-                    <option value="Dec">Dec</option>
-                </select>
-                <select name="bd_day">
-                    <option value="01">01</option>
-                    <option value="02">02</option>
-                    <option value="03">03</option>
-                    <option value="04">04</option>
-                    <option value="05">05</option>
-                    <option value="06">06</option>
-                    <option value="07">07</option>
-                    <option value="08">08</option>
-                    <option value="09">09</option>
-                    <option value="10">10</option>
-                    <option value="11">11</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                    <option value="17">17</option>
-                    <option value="18">18</option>
-                    <option value="19">19</option>
-                    <option value="20">20</option>
-                    <option value="21">21</option>
-                    <option value="22">22</option>
-                    <option value="23">23</option>
-                    <option value="24">24</option>
-                    <option value="25">25</option>
-                    <option value="26">26</option>
-                    <option value="27">27</option>
-                    <option value="28">28</option>
-                    <option value="29">29</option>
-                    <option value="30">30</option>
-                    <option value="31">31</option>
-                </select>
-                <select id="year"></select>
-                <script type="text/javascript">
-                    function yearOptions (){
-                        var start = 1900;
-                        var end = new Date().getFullYear();
-                        var options = "";
-                        for (var year = start; year <= end; year++) {
-                            options = "<option>" + year + "</option>";
-                        }
-                        document.getElementById("year").innerHTML = options;
-                    }
-                        window.onload= yearOptions();
-                </script><br><br>
-                Gender<br>
-                <input type="radio" name="gender" value="male" checked>Male
-                <input type="radio" name="gender" value="female" checked>Female
-                <input type="radio" name="gender" value="custom" checked>Custom -->
                 <br><br>
                 By clicking Sign Up, you agree to our Terms and Data Policy. You may receive SMS Notifications from us and can opt out any time.<br><br>
                 <input  type="submit" value="Submit" style="background-color:maroon; border-radius: 5px; padding: 10px 30px; font-weight: bolder; border-style: none; color: white;">
