--- a/ProjectTemplate/HomePage.html
+++ b/ProjectTemplate/HomePage.html
@@ -5,55 +5,95 @@
 <link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Roboto+Slab&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
+            function codeAddress() {
+            onLoadHome();
+        }
+        window.onload = codeAddress;
     function LogOn(userId, pass) {
-			//the url of the webservice we will be talking to
-			var webMethod = "AccountServices.asmx/LogOn";
-			//the parameters we will pass the service (in json format because curly braces)
-			//note we encode the values for transmission over the web.  All the \'s are just
-			//because we want to wrap our keynames and values in double quotes so we have to
-			//escape the double quotes (because the overall string we're creating is in double quotes!)
-			var parameters = "{\"user_name\":\"" + encodeURI(userId) + "\",\"password\":\"" + encodeURI(pass) + "\"}";
-			//jQuery ajax method
-			$.ajax({
-				//post is more secure than get, and allows
-				//us to send big data if we want.  really just
-				//depends on the way the service you're talking to is set up, though
-				type: "POST",
-				//the url is set to the string we created above
-				url: webMethod,
-				//same with the data
-				data: parameters,
-				//these next two key/value pairs say we intend to talk in JSON format
-				contentType: "application/json; charset=utf-8",
-				dataType: "json",
-				//jQuery sends the data and asynchronously waits for a response.  when it
-				//gets a response, it calls the function mapped to the success key here
-				success: function (msg) {
-					//the server response is in the msg object passed in to the function here
-					//since our logon web method simply returns a true/false, that value is mapped
-					//to a generic property of the server response called d (I assume short for data
-					//but honestly I don't know...)
-					if (msg.d) {
-						//server replied true, so show the accounts panel
-						showPanel('accountsPanel');
-						window.location = "http://www.google.com/"
-					}
-					else {
-						//server replied false, so let the user know
-						//the logon failed
-						alert("logon failed");
-					}
-				},
-				error: function (e) {
-					//if something goes wrong in the mechanics of delivering the
-					//message to the server or the server processing that message,
-					//then this function mapped to the error key is executed rather
-					//than the one mapped to the success key.  This is just a garbage
-					//alert becaue I'm lazy
-					alert("You entered wrong information.");
-				}
-			});
-		}
+        //the url of the webservice we will be talking to
+        var webMethod = "AccountServices.asmx/LogOn";
+        //the parameters we will pass the service (in json format because curly braces)
+        //note we encode the values for transmission over the web.  All the \'s are just
+        //because we want to wrap our keynames and values in double quotes so we have to
+        //escape the double quotes (because the overall string we're creating is in double quotes!)
+        var parameters = "{\"user_name\":\"" + encodeURI(userId) + "\",\"password\":\"" + encodeURI(pass) + "\"}";
+        //jQuery ajax method
+        $.ajax({
+            //post is more secure than get, and allows
+            //us to send big data if we want.  really just
+            //depends on the way the service you're talking to is set up, though
+            type: "POST",
+            //the url is set to the string we created above
+            url: webMethod,
+            //same with the data
+            data: parameters,
+            //these next two key/value pairs say we intend to talk in JSON format
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            //jQuery sends the data and asynchronously waits for a response.  when it
+            //gets a response, it calls the function mapped to the success key here
+            success: function (msg) {
+                //the server response is in the msg object passed in to the function here
+                //since our logon web method simply returns a true/false, that value is mapped
+                //to a generic property of the server response called d (I assume short for data
+                //but honestly I don't know...)
+                if (msg.d) {
+                    //server replied true, so show the accounts panel
+                    showPanel('accountsPanel');
+                    window.location = "http://www.google.com/"
+                }
+                else {
+                    //server replied false, so let the user know
+                    //the logon failed
+                    alert("logon failed");
+                }
+            },
+            error: function (e) {
+                //if something goes wrong in the mechanics of delivering the
+                //message to the server or the server processing that message,
+                //then this function mapped to the error key is executed rather
+                //than the one mapped to the success key.  This is just a garbage
+                //alert becaue I'm lazy
+                alert("You entered wrong information.");
+            }
+        });
+    }
+
+    function onLoadHome() {
+        var webMethod = "ProjectServices.asmx/onLoadHome";
+        var parameters = "";
+
+        $.ajax({
+            type: "POST",
+            url: webMethod,
+            data: parameters,
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            success: function (msg) {
+                var artURLs = msg.d;
+                loadArtwork(artURLs);
+            },
+            error: function (e) {
+                alert("this code will only execute if javascript is unable to access the webservice");
+            }
+        });
+    }
+
+    function loadArtwork(artURLS) {
+        var artworkDiv = document.getElementById('artworkDiv');
+        var artURLS = artURLS.replace("[", "");
+        var artURLS = artURLS.replace("]", "");
+        var urls = artURLS.split(",");
+        for (var i = 0; i < urls.length; i++) {
+            var url = urls[i].substr(1);
+            url = url.slice(0, -1);
+            var newDiv = document.createElement('div');
+            var elem = document.createElement('img');
+            elem.src = url;
+            newDiv.appendChild(elem);
+            document.getElementById('artworkDiv').appendChild(newDiv);
+        }
+    }
 </script>
 <style>
     body, html {
@@ -89,7 +129,7 @@
       }
 </style>
 </head>
-<body>
+<body onload="javascript:onLoadHome()">
   <header>
     <div class="col1" style="display: inline-block; float: left;">
       <h1 style="font-family: 'Homemade Apple', cursive; display: inline-block; font-size: 40px; font-weight: bold; text-align: center;">&ensp;&ensp;Artwork Gallery&ensp;</h1>
@@ -107,17 +147,21 @@
     </div>
   </header>
     <div class="hero-image">
-      <div class="hero-text">
-        <h1 style="font-size: 45px;">Art Galleries</h1>
-        <h2 style="font-family: 'Homemade Apple', cursive; font-size:30px;">Where to turn your creation into income</h2>
-        <p style="font-size: 20px;">Open your own art gallery, make money and connect to other artists!</p><br>
-        <a href="SignUpPage.html" style="border-radius: 5px; font-weight: bolder; padding: 3px 50px; cursor: pointer;
-    line-height: 50px;
-    border: 4px solid white;
-    background-color: transparent; color: white; font-size:20px;text-decoration: none;">Join Now</a>
-      </div>
+        <div class="hero-text">
+            <h1 style="font-size: 45px;">Art Galleries</h1>
+            <h2 style="font-family: 'Homemade Apple', cursive; font-size:30px;">Where to turn your creation into income</h2>
+            <p style="font-size: 20px;">Open your own art gallery, make money and connect to other artists!</p><br>
+            <button onclick="window.location.href = 'SignUpPage.html'" style="border-radius: 5px; font-weight: bolder; padding: 3px 50px; cursor: pointer;
+                line-height: 50px;
+                border: 4px solid white;
+                background-color: transparent; color: white; font-size:20px;text-decoration: none;">Join Now</button>
+          
+        </div>
     </div>
     <p>Page Content..</p>
+    <div id="artworkDiv">
+
+    </div>
 
 </body>
 </html>
